service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service1
  namespace: ingress-nginx
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    # NodePort: 30200
  type: NodePort
