ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: my-ingress
  namespace: ingress-nginx 
  labels:
    app: my-app
spec:
  ingressClassName: nginx
  rules:
    - host: harnoorapp.com
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service1
                port:
                  number: 80
